# bevy-crab-pong

./: Cargo.toml  README.md  project-words.txt  rustfmt.toml
assets/: game.assets.ron  game.config.ron  game.config.yaml
assets/config/: game.ron
assets/modes/: 1-class-player.mode.ron  1-class-player.mode.yaml  1-classic-player.mode.yaml  2-classic-ai.mode.ron  2-classic-ai.mode.yaml  3-red-vs-blue-player.mode.ron  3-red-vs-blue-player.mode.yaml  4-red-vs-blue-ai.mode.ron  4-red-vs-blue-ai.mode.yaml  5-this-game-is-rigged.mode.ron  5-this-game-is-rigged.mode.yaml  6-stress-test.mode.ron  6-stress-test.mode.yaml
locales/: ui.yaml
src/: active.rs  animated_water.rs  arena.rs  assets.rs  ball.rs  barrier.rs  beach.rs  cached_assets.rs  collider.rs  components.rs  config.rs  constants.rs  crab.rs  debug_mode.rs  enemy.rs  events.rs  fade.rs  file.rs  files.rs  game.rs  gameover_message.rs  global_data.rs  goal.rs  hud.rs  level.rs  lib.rs  main.rs  menu.rs  mirror.rs  movement.rs  object.rs  objects.rs  ocean.rs  paddle.rs  player.rs  resources.rs  score.rs  serialization.rs  side.rs  spawners.rs  (+10 more)
src/common/: collider.rs  delayed.rs  fade.rs  mod.rs  movement.rs  scrolling_texture.rs
src/components/: ai.rs  animated_water.rs  arena.rs  ball.rs  balls.rs  barrier.rs  collider.rs  effects.rs  enemy.rs  environment.rs  fade.rs  fading.rs  for_state.rs  for_states.rs  gizmos.rs  goal.rs  goals.rs  hit_points_ui.rs  inputs.rs  mod.rs  movement.rs  paddle.rs  paddles.rs  player.rs  pole.rs  score.rs  scoring.rs  scrolling_texture.rs  side.rs  spawning.rs  swaying_camera.rs  target.rs  targeting.rs  team.rs  ui.rs  velocity.rs  wall.rs
src/ecs/: arena.rs  crab.rs  enemy.rs  goal.rs  mod.rs  paddle.rs  player.rs  score.rs  swaying_camera.rs  wall.rs
src/entities/: ball.rs  mod.rs  movement.rs
src/files/: mod.rs
src/game/: active.rs  animated_water.rs  assets.rs  ball.rs  barrier.rs  cached_assets.rs  competitors.rs  components.rs  constants.rs  enemy.rs  events.rs  fade.rs  gameover_message.rs  goal.rs  level.rs  mirror.rs  mod.rs  modes.rs  movement.rs  paddle.rs  player.rs  score.rs  screen.rs  state.rs  (+5 more)
(+130 files in other folders)
