[package]
name = "bevy-crab-pong"
version = "0.2.0"
authors = ["Joshua Ols <joshua.d.ols@gmail.com>"]
edition = "2021"
rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy_asset_loader = { version = "0.19.1", features = ["standard_dynamic_assets"] }
bevy_common_assets = { version = "0.9.0", features = ["ron"] }
leafwing-input-manager = "0.11.2"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.196", features = ["serde_derive"] }
spew = "0.4.0"
strum = { version = "0.26.1", features = ["derive"] }
