[package]
name = "bevy-crab-pong"
version = "0.2.0"
authors = ["Joshua Ols <joshua.d.ols@gmail.com>"]
edition = "2024"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.15.2", features = ["file_watcher"] }
bevy_asset_loader = { version = "0.22.0", features = ["3d", "standard_dynamic_assets"] }
bevy_common_assets = { version = "0.12.0", features = ["yaml"] }
derive-new = "0.7.0"
leafwing-input-manager = "0.16.0"
rand = { version = "0.9.0", features = ["small_rng"] }
serde = { version = "1.0.218", features = ["serde_derive"] }
strum = { version = "0.27.1", features = ["derive"] }
